feat: update .env example and delete unused mobile page

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,7 +1,10 @@
-DB_USER=
-DB_PASSWORD=
+DB_USER=c2s
+DB_PASSWORD=c2s
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=
+DB_NAME=c2s
 
 BASE_URL=http://localhost:8000
+
+# For OpenAI API key, you can get it from https://platform.openai.com/account/api-keys
+OPEN_AI_API_KEY=sk-proj-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
