--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -14,16 +14,20 @@ httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
 jiter==0.9.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 openai==1.76.0
+packaging==25.0
+pluggy==1.5.0
 psycopg2==2.9.10
 pydantic==2.11.3
 pydantic_core==2.33.1
 Pygments==2.19.1
+pytest==8.3.5
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
